--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "news",
   "version": "0.1.0",
-  "homepage": "https://guanteckkang.github.io/react-gh-pages",
+  "homepage": "https://guanteckkang.github.io/react-newsearch",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
